force-app/main/default/objects/PKBSiteSetup__c/PKBSiteSetup__c.object-meta.xml
<CustomObject>
    <customHelpPage>knowledgePKBSiteSetupHelp</customHelpPage>
    <description>A public knowledge base template that uses Salesforce Knowledge and Sites.</description>
    <label>PKB Site Setup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKB Site Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>