force-app/main/default/objects/PKBSiteSetup__c/fields/Category1Description__c.field-meta.xml
<CustomField>
    <fullName>Category1Description__c</fullName>
    <inlineHelpText>The description of the first category that appears on the Home page of the public knowledge base.</inlineHelpText>
    <label>Category 1 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>