force-app/main/default/objects/PKBSiteSetup__c/fields/Category4Description__c.field-meta.xml
<CustomField>
    <fullName>Category4Description__c</fullName>
    <inlineHelpText>The description of the fourth category that appears on the Home page of the public knowledge base.</inlineHelpText>
    <label>Category 4 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>