force-app/main/default/objects/PKBSiteSetup__c/fields/Category6Description__c.field-meta.xml
<CustomField>
    <fullName>Category6Description__c</fullName>
    <inlineHelpText>The description of the sixth category that appears on the Home page of the public knowledge base.</inlineHelpText>
    <label>Category 6 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>