force-app/main/default/objects/PKBSiteSetup__c/fields/CategoryGroupName__c.field-meta.xml
<CustomField>
    <fullName>CategoryGroupName__c</fullName>
    <inlineHelpText>The category group to display in the public knowledge base. Only one category group can be displayed.</inlineHelpText>
    <label>Category Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>