force-app/main/default/objects/PKBSiteSetup__c/fields/PKBSiteName__c.field-meta.xml
<CustomField>
    <fullName>PKBSiteName__c</fullName>
    <inlineHelpText>The Site Name of the Force.com site created for Salesforce Knowledge.</inlineHelpText>
    <label>Associated PKB Site Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>