force-app/main/default/objects/PKBSiteSetup__c/fields/RootCategoryName__c.field-meta.xml
<CustomField>
    <fullName>RootCategoryName__c</fullName>
    <inlineHelpText>The category to display in the public knowledge base. All child categories under the specified root are displayed. The root must be a category within the category group specified in the previous field.</inlineHelpText>
    <label>Root Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>