force-app/main/default/objects/PKBSiteSetup__c/fields/SecondaryLanguages__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLanguages__c</fullName>
    <inlineHelpText>The secondary languages your knowledge base site supports, identified by their IETF language codes.</inlineHelpText>
    <label>Site Secondary Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>zh_TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>